--- a/replay_songs_analysis.ipynb
+++ b/replay_songs_analysis.ipynb
@@ -1461,7 +1461,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Can't believe I had some replay sessions from 1AM to 6AM. The sessions occured through out the day but they are less often when the hour is 7, 12, 18, 19, 20."
+    "Surprisingly I had some replay sessions from 1AM to 6AM. The sessions occured through out the day but they are less often when the hour is 7, 12, 18, 19, 20."
    ]
   },
   {
