--- a/2. All Songs of an Artist/main.ipynb
+++ b/2. All Songs of an Artist/main.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'NoneType' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 8>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdotenv\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_dotenv\n\u001b[0;32m      7\u001b[0m artist_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLinh cáo\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;66;03m# name of the artist you want to create the playlist\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m token \u001b[38;5;241m=\u001b[39m \u001b[43mspotify\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_token\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m artist_id \u001b[38;5;241m=\u001b[39m spotify\u001b[38;5;241m.\u001b[39msearch_for_artist_id(token, artist_name\u001b[38;5;241m=\u001b[39martist_name) \u001b[38;5;66;03m# get the artist_id\u001b[39;00m\n\u001b[0;32m     10\u001b[0m artist_full_name \u001b[38;5;241m=\u001b[39m spotify\u001b[38;5;241m.\u001b[39msearch_for_artist_name(token, artist_name\u001b[38;5;241m=\u001b[39martist_name) \u001b[38;5;66;03m# get the artist's full name\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\Admin\\OneDrive\\Documents\\GitHub\\Projects\\All songs of an artist\\spotify_ver2.py:18\u001b[0m, in \u001b[0;36mget_token\u001b[1;34m()\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_token\u001b[39m():\n\u001b[1;32m---> 18\u001b[0m     auth_string \u001b[38;5;241m=\u001b[39m \u001b[43mclient_id\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m:\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m \u001b[38;5;241m+\u001b[39m client_secret\n\u001b[0;32m     19\u001b[0m     auth_bytes \u001b[38;5;241m=\u001b[39m auth_string\u001b[38;5;241m.\u001b[39mencode(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     20\u001b[0m     auth_base64 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(base64\u001b[38;5;241m.\u001b[39mb64encode(auth_bytes), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'NoneType' and 'str'"
+     ]
+    }
+   ],
    "source": [
     "import spotify_ver2 as spotify\n",
     "import spotipy\n",
@@ -12,7 +25,7 @@
     "from spotipy.oauth2 import SpotifyOAuth\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "artist_name = \"Taylor Swift\" # name of the artist you want to create the playlist\n",
+    "artist_name = \"Linh cáo\" # name of the artist you want to create the playlist\n",
     "token = spotify.get_token()\n",
     "artist_id = spotify.search_for_artist_id(token, artist_name=artist_name) # get the artist_id\n",
     "artist_full_name = spotify.search_for_artist_name(token, artist_name=artist_name) # get the artist's full name\n",
